# gh-service

./: .envrc.sample  Cargo.toml  README.md
src/: main.rs
src/github/: mock_repo_details_body.json  mod.rs
